# goxoy-file-chunker

./: Cargo.toml  README.md
src/: file_chunker.rs  lib.rs
