[package]
name = "goxoy-file-chunker"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Goxoy/goxoy-file-chunker/"
keywords = ["file-chunk","file-chunker","file-splitter","split-file"]
description = "Goxoy File Chunker splits files into equal chunks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3="0.1"
serde_json = "1.0.103"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"
substring = "1.4.5"
rand = "0.8.5"
hex = "0.4.3"
data-encoding = "2.5.0"
